# misen

./: .gitignore  CONTRIBUTING.md  README.md  a.py  misen.toml  pyproject.toml  zensical.toml
.github/workflows/: main.yml  release_to_pypi.yml
dango/: core.py  executor.py  experiment.py  task.py
dango/utils/: det_hash.py  task_graph_builder.py
docs/: api.md  conf.py  design_conda_snapshot.md  getting_started.md  index.md
docs/source/: api.md  index.rst
src/dango/: __init__.py
src/dango/utils/: __init__.py  task_graph_builder.py
src/misen/: __init__.py  caches.py  cli.py  exceptions.py  executor.py  experiment.py  misen_settings.py  new_task.py  sentinels.py  settings.py  task.py  task_metadata.py  task_properties.py  tasks.py  workspace.py
src/misen/executors/: __init__.py  in_process.py  local.py  skypilot.py  slurm.py
src/misen/executors/local/: __init__.py  budget.py  executor.py  scheduler.py
src/misen/executors/slurm/: __init__.py  executor.py  parsing.py  rules.py
src/misen/serialization/: __init__.py  _attrs.py  _builtins.py  _msgspec.py  _torch.py
src/misen/utils/: __init__.py  assigned_resources.py  auto.py  cached_property.py  det_hash.py  execute.py  experiment_cli.py  from_params.py  frozen_mixin.py  function_introspection.py  functions.py  graph.py  hashes.py  hashing.py  lock.py  locks.py  log_capture.py  nested.py  nested_args.py  object_io.py  resource_binding.py  runtime_events.py  sentinels.py  serialization.py  settings.py  snapshot.py  task_construction.py  task_graph_builder.py  task_operators.py  task_partitioning.py  task_properties.py  task_runtime.py  task_utils.py  tui.py  type_registry.py  work_unit.py  workspace_result_map.py
src/misen/utils/cli/: __init__.py  display.py  experiment.py  fill.py  tui.py
src/misen/utils/hashing/: __init__.py  base.py  handler_base.py  hash_types.py
src/misen/utils/hashing/handlers/: __init__.py  stdlib.py
src/misen/utils/hashing/handlers/optional/: __init__.py  attrs.py  msgspec.py  numpy.py  pyarrow.py  pydantic.py  sympy.py  torch.py
src/misen/utils/hashing/libs/: __init__.py  attrs.py  msgspec.py  numpy.py  pyarrow.py  pydantic.py  stdlib.py  sympy.py  torch.py
src/misen/utils/serde/: __init__.py  base.py  registry.py  serializer_base.py
src/misen/utils/serde/libs/: __init__.py  altair.py  arviz.py  attrs.py  catboost.py  dask.py  dataclass.py  faiss.py  geopandas.py  h5py.py  hf_datasets.py  jax.py  keras.py  lightgbm.py  msgspec_struct.py  networkx.py  numpy.py  onnx.py  pandas.py  pillow.py  plotly.py  polars.py  pyarrow.py  pydantic.py  scipy.py  shapely.py  sklearn.py  stdlib.py  sympy.py  tensorflow.py  tokenizers.py  torch.py  transformers.py  xarray.py  xgboost.py  zarr.py
src/misen/utils/serde/serializers/: __init__.py  stdlib.py
src/misen/utils/serde/serializers/optional/: __init__.py  altair.py  attrs.py  beautifulsoup.py  bokeh.py  catboost.py  docx.py  faiss.py  geopandas.py  graphviz.py  hf_datasets.py  jax.py  keras.py  lightgbm.py  lxml.py  matplotlib.py  msgspec_struct.py  networkx.py  numpy.py  onnx.py  openpyxl.py  pandas.py  pillow.py  plotly.py  polars.py  pptx.py  pyarrow.py  pydantic.py  pydub.py  scipy.py  shapely.py  sklearn.py  spacy.py  sympy.py  tensorflow.py  tokenizers.py  torch.py  transformers.py  xarray.py  xgboost.py
src/misen/workspaces/: __init__.py  cloud.py  disk.py  memory.py
tests/: test_auto.py  test_cloud_workspace.py  test_composed_graph.py  test_conda_snapshot.py  test_disk_result_cache_mapping.py  test_execute.py  test_executor_assigned_resources.py  test_executor_lifecycle.py  test_experiment.py  test_experiment_cache.py  test_experiment_cli.py  test_hash_handlers.py  test_hash_pinned.py  test_lmdb_mapping.py  test_local_executor_time_limits.py  test_locks.py  test_memory_workspace.py  test_resource_binding.py  test_serde_framework.py  test_serde_jax.py  test_serde_libs.py  test_serde_msgpack.py  test_serde_numpy.py  test_serde_overrides.py  test_serde_stdlib.py  test_serde_torch.py  test_serde_zip.py  test_settings.py  test_skypilot_executor.py  test_slurm_executor.py  test_slurm_flags.py  test_task_builtin.py  test_task_executor_workspace.py  test_task_hashing.py  test_task_immutability.py  test_task_operators.py  test_with_resources.py  test_workspace_logs.py
tests/fixtures/conda_snapshot/: pixi.toml
