[project]
name = "misen"
version = "0.1.0"
description = "DAG execution engine"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Apoorv Khandelwal", email = "mail@apoorvkh.com" }]
dependencies = [
  "cloudpickle>=3.0",
  "dill>=0.4.0",
  "flufl-lock>=8.2.0",
  "lmdb>=1.7.5",
  "misen_hash",
  "msgspec>=0.20.0",
  "psutil",
  "rustworkx>=0.15.0",
  "tomli>=1.1.0 ; python_version < '3.11'",
  "typing_extensions>=4.1.0",
  "tyro>=1.0.0"
]

[project.optional-dependencies]
slurm = ["submitit>=1.5.0", "setuptools"]

[dependency-groups]
dev = [
  "pytest==8.3.3",
  "ruff==0.14.11",
  "ty==0.0.11",
]
docs = [
  "mkdocstrings-python>=2.0.1",
  "zensical>=0.0.17",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
src = ["src", "tests", "packages"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "FIX",  # tmp
  "TD",  # tmp
  "COM812",  # conflicts with formatter
  "PLC0415",
  "PLR0913",
  "C901",
  "ANN401",
  "SIM117"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
default-groups = "all"

[tool.uv.sources]
misen-hash = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
