[project]
name = "misen"
version = "0.1.0"
description = "DAG execution engine"
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE"]
authors = [{ name = "Apoorv Khandelwal", email = "mail@apoorvkh.com" }]
dependencies = [
  "cloudpickle>=3.0",
  "dill>=0.4.0",
  "flufl-lock>=8.2.0",
  "libcst>=1.8.2",
  "lmdb>=1.7.5",
  "misen_hash",
  "msgspec>=0.20.0",
  "psutil",
  "python-dotenv>=1.0",
  "rich>=13.7.0",
  "rustworkx>=0.15.0",
  "textual>=0.78.0",
  "tomli>=1.1.0 ; python_version < '3.11'",
  "typing_extensions>=4.1.0",
  "tyro>=1.0.0",
  "uv>=0.9.0",
]

[project.scripts]
misen = "misen.cli:main"

[dependency-groups]
dev = ["pytest==8.3.3", "ruff==0.15.2", "ty==0.0.18"]
docs = ["mkdocstrings-python==2.0.1", "zensical==0.0.17"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
src = ["src", "tests", "packages"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "FIX",  # tmp
  "TD",  # tmp
  "COM812",  # conflicts with formatter
  "PLC0415",  # allow function-level imports
  "ANN401",  # allow Any type
  "SIM117",  # allow nested with blocks
  "C901",  # allow complexity
  "PLR0912",  # too many branches
  "PLR0913",  # too many arguments
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[[tool.ty.overrides]]
include = ["packages/misen-hash/src/misen_hash/handlers/optional/**"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"

[tool.uv.sources]
misen-hash = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
