[project]
name = "misen"
version = "0.0.5"
description = "DAG execution engine"
readme = "README.md"
requires-python = ">=3.11"
license-files = ["LICENSE"]
authors = [{ name = "Apoorv Khandelwal", email = "mail@apoorvkh.com" }]
dependencies = [
  "cloudpickle>=3.0",
  "flufl-lock>=8.2.0",
  "libcst>=1.8.2",
  "lmdb>=1.7.5",
  "xxhash>=3.0.0",
  "msgspec>=0.20.0",
  "psutil>=6.0; sys_platform != 'linux'",
  "python-dotenv>=1.2.2",
  "rich>=13.7.0",
  "rustworkx>=0.15.0",
  "textual>=0.78.0",
  "typing_extensions>=4.1.0",
  "tyro>=1.0.0",
  "uv>=0.11.6",
  # transitive dep of rich/textual
  # earlier versions contain a vulnerability
  "pygments>=2.20.0"
]

[project.scripts]
misen = "misen.cli:main"

[dependency-groups]
dev = ["pytest==9.0.3", "ruff==0.15.10", "ty==0.0.31"]
docs = ["mkdocstrings-python==2.0.1", "zensical==0.0.17"]

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "FIX",  # tmp
  "TD",  # tmp
  "COM812",  # conflicts with formatter
  "PLC0415",  # allow function-level imports
  "ANN401",  # allow Any type
  "SIM117",  # allow nested with blocks
  "C901",  # allow complexity
  "PLR0911",  # too many returns
  "PLR0912",  # too many branches
  "PLR0913",  # too many arguments
  "PLR0915",  # too many statements
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[[tool.ty.overrides]]
include = ["src/misen/utils/hashing/libs/**", "src/misen/utils/serde/libs/**"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"
